--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -6,8 +6,11 @@ authors = ["ogontaro <ogontaro@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
+python = ">=3.7,<3.8"
 
 [tool.poetry.group.dev.dependencies]
+pytest = "^7.4.2"
+pylint = "^2.17.5"
 
 [build-system]
 requires = ["poetry-core"]
