--- a/.github/workflows/cruft-update-webhook.yml
+++ b/.github/workflows/cruft-update-webhook.yml
@@ -14,7 +14,7 @@ jobs:
           CRUFT_GITHUB_ACCESS_TOKEN: ${{ secrets.CRUFT_GITHUB_ACCESS_TOKEN }}
         run: |
           REPOS=(
-            "ogontaro/ogontaro_infra"
+            "ogontaro/mizu-fill_sensor"
           )
           for REPO in "${REPOS[@]}"; do
             curl \
